extended bibliography catalog

--- a/docs/resources.bib
+++ b/docs/resources.bib
@@ -2,7 +2,7 @@
   pytorch-neural-doodle/docs/resources.bib
 
   Created by Paul Warkentin <paul@warkentin.email> on 21/08/2018.
-  Updated by Paul Warkentin <paul@warkentin.email> on 21/08/2018.
+  Updated by Bastian Boll <mail@bbboll.com> on 28/08/2018.
 }
 
 @article{doodles2016,
@@ -21,4 +21,27 @@
   eprint = {1601.04589},
   eprintclass = {cs.CV},
   date = {2016-01-18}
+}
+
+@inproceedings{gatys2015texture,
+  title={Texture synthesis using convolutional neural networks},
+  author={Gatys, Leon and Ecker, Alexander S and Bethge, Matthias},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={262--270},
+  year={2015}
+}
+
+@article{gatys2015neural,
+  title={A neural algorithm of artistic style},
+  author={Gatys, Leon A and Ecker, Alexander S and Bethge, Matthias},
+  journal={arXiv preprint arXiv:1508.06576},
+  year={2015}
+}
+
+@inproceedings{ulyanov2016texture,
+  title={Texture Networks: Feed-forward Synthesis of Textures and Stylized Images.},
+  author={Ulyanov, Dmitry and Lebedev, Vadim and Vedaldi, Andrea and Lempitsky, Victor S},
+  booktitle={ICML},
+  pages={1349--1357},
+  year={2016}
 }
