renamed documentation files

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -2,7 +2,9 @@
 %% pytorch-neural-doodle/docs/main.tex
 %%
 %% Created by Paul Warkentin <paul@warkentin.email> on 21/08/2018.
-%% Updated by Paul Warkentin <paul@warkentin.email> on 21/08/2018.
+%% Updated by Bastian Boll <mail@bbboll.com> on 28/08/2018.
+%%
+%% Usage: pdflatex main
 %%
 
 \documentclass[a4paper,12pt,oneside]{article}
@@ -15,13 +17,13 @@
 \input{\rootpath/content/headings}
 
 \input{\rootpath/content/title}
-\input{\rootpath/content/chapters/abstract}
+\input{\rootpath/content/chapters/00_abstract}
 \input{\rootpath/content/toc}
-\input{\rootpath/content/chapters/introduction}
-\input{\rootpath/content/chapters/implementation}
-\input{\rootpath/content/chapters/comparison}
-\input{\rootpath/content/chapters/results}
-\input{\rootpath/content/chapters/conclusion}
+\input{\rootpath/content/chapters/01_introduction}
+\input{\rootpath/content/chapters/02_implementation}
+\input{\rootpath/content/chapters/03_comparison}
+\input{\rootpath/content/chapters/04_results}
+\input{\rootpath/content/chapters/05_conclusion}
 \input{\rootpath/content/bib}
 
 \end{document}
