--- a/docs/resources.bib
+++ b/docs/resources.bib
@@ -5,6 +5,13 @@
   Updated by Bastian Boll <mail@bbboll.com> on 28/08/2018.
 }
 
+@article{vgg2014,
+  title={Very deep convolutional networks for large-scale image recognition},
+  author={Simonyan, Karen and Zisserman, Andrew},
+  journal={arXiv preprint arXiv:1409.1556},
+  year={2014}
+}
+
 @article{doodles2016,
   title = {Semantic Style Transfer and Turning Two-Bit Doodles into Fine Artworks},
   author = {Champandard, A. J.},
