--- a/docs/settings.tex
+++ b/docs/settings.tex
@@ -42,11 +42,11 @@
 
 % create plots etc.
 \usepackage{tikz}
-\usepackage{pgfplots}
+% \usepackage{pgfplots}
 
-\pgfplotsset{
-  table/search path={\rootpath/plots/},
-}
+% \pgfplotsset{
+%   table/search path={\rootpath/plots/},
+% }
 
 % custom headers and footers
 \usepackage{scrpage2}
