introduction of gatys

--- a/docs/content/title.tex
+++ b/docs/content/title.tex
@@ -2,11 +2,11 @@
 %% pytorch-neural-doodle/docs/content/title.tex
 %%
 %% Created by Paul Warkentin <paul@warkentin.email> on 21/08/2018.
-%% Updated by Paul Warkentin <paul@warkentin.email> on 21/08/2018.
+%% Updated by Bastian Boll <mail@bbboll.com> on 02/10/2018.
 %%
 
 \title{%
-  {\LARGE \textbf{Neural Doodle}} \\[0.5cm]
+  {\LARGE \textbf{Artistic Style Transfer}} \\[0.5cm]
   {\large Ruprecht-Karls-Universität Heidelberg} \\
   {\large Heidelberg Collaboratory for Image Processing} \\[0.5cm]
   {\large Advanced Machine Learning} \\[-0.2cm]
