--- a/docs/resources.bib
+++ b/docs/resources.bib
@@ -52,3 +52,34 @@
   pages={1349--1357},
   year={2016}
 }
+
+@inproceedings{heeger1995pyramid,
+  title={Pyramid-based texture analysis/synthesis},
+  author={Heeger, David J and Bergen, James R},
+  booktitle={Proceedings of the 22nd annual conference on Computer graphics and interactive techniques},
+  pages={229--238},
+  year={1995},
+  organization={ACM}
+}
+
+@article{rosenholtz2012summary,
+  title={A summary statistic representation in peripheral vision explains visual search},
+  author={Rosenholtz, Ruth and Huang, Jie and Raj, Alvin and Balas, Benjamin J and Ilie, Livia},
+  journal={Journal of vision},
+  volume={12},
+  number={4},
+  pages={14--14},
+  year={2012},
+  publisher={The Association for Research in Vision and Ophthalmology}
+}
+
+@article{julesz1962visual,
+  title={Visual pattern discrimination},
+  author={Julesz, Bela},
+  journal={IRE transactions on Information Theory},
+  volume={8},
+  number={2},
+  pages={84--92},
+  year={1962},
+  publisher={IEEE}
+}
