--- a/docs/content/title.tex
+++ b/docs/content/title.tex
@@ -6,7 +6,7 @@
 %%
 
 \title{%
-  {\LARGE \textbf{Artistic Style Transfer}} \\[0.5cm]
+  {\LARGE \textbf{Neural Doodles}} \\[0.5cm]
   {\large Ruprecht-Karls-Universität Heidelberg} \\
   {\large Heidelberg Collaboratory for Image Processing} \\[0.5cm]
   {\large Advanced Machine Learning} \\[-0.2cm]
