--- a/docs/resources.bib
+++ b/docs/resources.bib
@@ -2,7 +2,7 @@
   pytorch-neural-doodle/docs/resources.bib
 
   Created by Paul Warkentin <paul@warkentin.email> on 21/08/2018.
-  Updated by Bastian Boll <mail@bbboll.com> on 28/08/2018.
+  Updated by Bastian Boll <mail@bbboll.com> on 03/10/2018.
 }
 
 @article{vgg2014,
@@ -45,12 +45,22 @@
   year={2015}
 }
 
-@inproceedings{ulyanov2016texture,
-  title={Texture Networks: Feed-forward Synthesis of Textures and Stylized Images.},
-  author={Ulyanov, Dmitry and Lebedev, Vadim and Vedaldi, Andrea and Lempitsky, Victor S},
-  booktitle={ICML},
-  pages={1349--1357},
-  year={2016}
+@article{ulyanov2016texture,
+  author    = {Dmitry Ulyanov and
+               Vadim Lebedev and
+               Andrea Vedaldi and
+               Victor S. Lempitsky},
+  title     = {Texture Networks: Feed-forward Synthesis of Textures and Stylized
+               Images},
+  journal   = {CoRR},
+  volume    = {abs/1603.03417},
+  year      = {2016},
+  url       = {http://arxiv.org/abs/1603.03417},
+  archivePrefix = {arXiv},
+  eprint    = {1603.03417},
+  timestamp = {Mon, 13 Aug 2018 16:47:51 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/UlyanovLVL16},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 @inproceedings{heeger1995pyramid,
