--- a/docs/resources.bib
+++ b/docs/resources.bib
@@ -83,6 +83,12 @@
   publisher={The Association for Research in Vision and Ophthalmology}
 }
 
+@misc{deepforger2015,
+  title = {Deep forger: Paint photos in the style of famous artists},
+  author = {Champandard, A. J.},
+  howpublished = {\url{https://deepforger.com/}}
+}
+
 @article{julesz1962visual,
   title={Visual pattern discrimination},
   author={Julesz, Bela},
@@ -92,4 +98,29 @@
   pages={84--92},
   year={1962},
   publisher={IEEE}
+}
+
+@article{thoma2016survey,
+  title={A survey of semantic segmentation},
+  author={Thoma, Martin},
+  journal={arXiv preprint arXiv: 1602.06541},
+  year={2016}
+}
+
+@article{yang2017semantic,
+  title={Semantic portrait color transfer with internet images},
+  author={Yang, Yue and Zhao, Hanli and You, Lihua and Tu, Renlong and Wu, Xueyi and Jin, Xiaogang},
+  journal={Multimedia Tools and Applications},
+  volume={76},
+  number={1},
+  pages={523--541},
+  year={2017},
+  publisher={Springer}
+}
+
+@article{nikulin2016exploring,
+  title={Exploring the neural algorithm of artistic style},
+  author={Nikulin, Yaroslav and Novak, Roman},
+  journal={arXiv preprint arXiv:1602.07188},
+  year={2016}
 }
