--- a/docs/resources.bib
+++ b/docs/resources.bib
@@ -124,3 +124,10 @@
   journal={arXiv preprint arXiv:1602.07188},
   year={2016}
 }
+
+@article{sanakoyeu2018style,
+  title={A Style-Aware Content Loss for Real-time HD Style Transfer},
+  author={Sanakoyeu, Artsiom and Kotovenko, Dmytro and Lang, Sabine and Ommer, Bj{\"o}rn},
+  journal={arXiv preprint arXiv:1807.10201},
+  year={2018}
+}
